hphp/hack/test/typecheck/enum/bad/trivial_compare_int_arraykey_enum_to_enum_converted_to_bool_bad.php.exp
WARN: File "trivial_compare_int_arraykey_enum_to_enum_converted_to_bool_bad.php", line 9, characters 11-21:
Invalid comparison: This expression will always return `false`.
A value of type `bool` can never be equal to a value of type `X` (Warn[12007])
WARN: File "trivial_compare_int_arraykey_enum_to_enum_converted_to_bool_bad.php", line 13, characters 11-19:
Invalid comparison: This expression will always return `false`.
A value of type `X` can never be equal to a value of type `bool` (Warn[12007])
ERROR: File "trivial_compare_int_arraykey_enum_to_enum_converted_to_bool_bad.php", line 9, characters 11-21:
This expression is always `false` (Typing[4118])
  File "trivial_compare_int_arraykey_enum_to_enum_converted_to_bool_bad.php", line 8, characters 19-22:
  This is a bool
  File "trivial_compare_int_arraykey_enum_to_enum_converted_to_bool_bad.php", line 3, characters 6-6:
  This is an array key (int | string) arising from an implicit `as arraykey` constraint on this type
ERROR: File "trivial_compare_int_arraykey_enum_to_enum_converted_to_bool_bad.php", line 13, characters 11-19:
This expression is always `false` (Typing[4118])
  File "trivial_compare_int_arraykey_enum_to_enum_converted_to_bool_bad.php", line 12, characters 13-13:
  This is an array key (int | string) arising from an implicit `as arraykey` constraint on this type
  File "trivial_compare_int_arraykey_enum_to_enum_converted_to_bool_bad.php", line 12, characters 19-22:
  This is a bool
